# malkuth

./: .gitignore  Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: checks.yml  docs.yml  npm-release.yml  publish.yml
benches/: proxy.rs  rpc.rs
crates/malkuth/: Cargo.toml
crates/malkuth-cli/: Cargo.toml
crates/malkuth-cli/src/: cli.rs  main.rs  pool.rs  proxy.rs  watcher.rs
crates/malkuth-core/: Cargo.toml
crates/malkuth-core/src/: lease.rs  lib.rs  lifecycle.rs  lock.rs  transport.rs  types.rs
crates/malkuth-test-app/: Cargo.toml
crates/malkuth-test-app/src/: main.rs
crates/malkuth/benches/: proxy.rs  rpc.rs
crates/malkuth/examples/: coordination_lock.rs  minimal_server.rs  supervised_workers.rs
crates/malkuth/src/: client.rs  codec.rs  hooks.rs  jsonrpc.rs  leader.rs  lease.rs  lib.rs  lock.rs  pg_lock.rs  probes.rs  registry.rs  server.rs  service.rs  signals.rs  wire.rs  worker.rs
crates/malkuth/src/transport/: ipc.rs  mod.rs  tcp.rs  ws.rs
crates/malkuth/tests/: supervised.rs  tcp_rpc.rs  transports.rs
docs/: lagrange.toml
docs/ar/: README.md  SUMMARY.md  book.toml
docs/ar/design/: supervision-and-rolling-update.md
docs/ar/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
docs/en/: README.md  SUMMARY.md  book.toml
docs/en/design/: supervision-and-rolling-update.md
docs/en/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
docs/es/: README.md  SUMMARY.md
docs/es/design/: supervision-and-rolling-update.md
docs/es/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
docs/fr/: README.md  SUMMARY.md
docs/fr/design/: supervision-and-rolling-update.md
docs/fr/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
docs/ja/: README.md  SUMMARY.md
docs/ja/design/: supervision-and-rolling-update.md
docs/ja/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
docs/ko/: README.md  SUMMARY.md
docs/ko/design/: supervision-and-rolling-update.md
docs/ko/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
docs/ru/: README.md  SUMMARY.md
docs/ru/design/: supervision-and-rolling-update.md
docs/ru/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
docs/theme/: lang-switcher.js
docs/zhs/: README.md  SUMMARY.md
docs/zhs/design/: supervision-and-rolling-update.md
docs/zhs/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
docs/zht/: README.md  SUMMARY.md
docs/zht/design/: supervision-and-rolling-update.md
docs/zht/guides/: lifecycle.md  listener.md  locks.md  probes.md  quickstart.md  workers.md
examples/: coordination_lock.rs  minimal_server.rs  supervised_workers.rs  test_app.rs
scripts/: requirements.txt
scripts/tests/: _harness.py  run_all.py  test_app_rolling_update.py  test_app_supervise_restart.py  test_cli_proxy_basic.py  test_cli_proxy_sticky_crash.py  test_cli_rolling_restart.py
scripts/utils/: logger.py
src/: client.rs  codec.rs  config.rs  jsonrpc.rs  leader.rs  lease.rs  lib.rs  lifecycle.rs  lock.rs  mcp.rs  pg_lock.rs  probes.rs  registry.rs  server.rs  service.rs  signals.rs  traits.rs  types.rs  wire.rs  worker.rs
src/transport/: ipc.rs  mod.rs  tcp.rs  ws.rs
tests/: mcp_smoke.rs  supervised.rs  tcp_rpc.rs  transports.rs
