[workspace]
resolver = "2"
members = ["crates/malkuth-core", "crates/malkuth", "crates/malkuth-cli", "crates/malkuth-test-app"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["langyo <langyo.china@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/celestia-island/malkuth"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
event-listener = "5"
# futures-util is used only for Stream/Sink extension traits on WS frames.
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "signal", "sync", "time", "process", "io-util", "fs"] }
tokio-tungstenite = "0.29"
interprocess = "2"
tokio-postgres = "0.7"
clap = { version = "4", features = ["derive"] }
notify = "8"
libc = "0.2"
malkuth-core = { path = "crates/malkuth-core", version = "0.2.0" }

[profile.release]
opt-level = 3
lto = "thin"
