[package]
name = "malkuth-cli"
description = "Watchdog-style supervisor binary: `malkuth -- <cmd>` wraps any program with file watching, a pod pool and an L4 sticky reverse proxy for rolling updates / gray release."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
readme = "../../docs/en/README.md"
keywords = ["supervisor", "graceful-shutdown", "rolling-update", "proxy", "cli"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[[bin]]
name = "malkuth"
path = "src/main.rs"

[dependencies]
malkuth-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
