[package]
name = "malkuth-core"
description = "Protocol types & trait contracts for malkuth: lifecycle, supervision, coordination-lock, JSON-RPC transport, and pluggable lifecycle/exit/heartbeat hooks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
readme = "../../docs/en/README.md"
keywords = ["supervisor", "graceful-shutdown", "rolling-update", "jsonrpc", "socket-activation"]
categories = ["asynchronous", "network-programming", "development-tools"]
publish = true

[features]
default = []

# Derive `JsonSchema` on every wire type (for OpenAPI / type generation).
schema = ["dep:schemars"]

# CoordinationLock backend: POSIX advisory flock (unix only).
file-lock = []
# CoordinationLock backend: file lease with TTL auto-expiry on crash.
lease = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, optional = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Tokio sync primitives for DrainController.
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
