[package]
name = "malkuth-test-app"
description = "Internal test/reference binary for malkuth: self-replicating supervised workers + gradual gray-update, exercised by the Python scripts/ tests. Not published."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "malkuth-test-app"
path = "src/main.rs"

[dependencies]
malkuth = { path = "../malkuth", features = ["tcp", "worker", "signals"] }
malkuth-core = { workspace = true }
tokio = { workspace = true }
