[package]
name = "malkuth"
description = "Service-supervision toolkit: JSON-RPC over pluggable transports (TCP / WebSocket / IPC), supervised workers, split health probes, coordination locks and lease-based leader election. Tokio-based."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
readme = "../../docs/en/README.md"
keywords = ["supervisor", "graceful-shutdown", "rolling-update", "jsonrpc", "socket-activation"]
categories = ["asynchronous", "network-programming", "development-tools"]
publish = true

[features]
default = ["tcp", "signals"]

# ── JSON-RPC transports ────────────────────────────────────────
tcp = []                                  # tokio::net (on by default; tokio is a base dep)
ws = ["dep:tokio-tungstenite"]            # tokio-tungstenite
ipc = ["dep:interprocess"]                # interprocess (tokio async)

# ── default facilities ─────────────────────────────────────────
signals = []                              # tokio::signal ExitSource
worker = []                               # tokio::process Supervisor
axum-probe = ["dep:axum"]                 # HTTP /healthz + /readyz router

# ── CoordinationLock backends (forwarded from core) ────────────
file-lock = ["malkuth-core/file-lock"]
lease = ["malkuth-core/lease"]
pg-lock = ["dep:tokio-postgres"]

# ── fault-tolerance strategy ───────────────────────────────────
replica = []                              # in-memory InstanceRegistry
leader-follower = []                      # LeaseLeaderElector over core's lease

[dependencies]
malkuth-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

tokio-tungstenite = { workspace = true, optional = true }
interprocess = { workspace = true, optional = true, features = ["tokio"] }
axum = { version = "0.8", optional = true }
tokio-postgres = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
