[package]
name = "malkuth"
description = "Service-supervision toolkit: JSON-RPC over pluggable transports, supervised workers, split health probes, coordination locks and lease-based leader election. Tokio-based."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
readme = "../../docs/en/README.md"
keywords = ["supervisor", "graceful-shutdown", "rolling-update", "jsonrpc", "socket-activation"]
categories = ["asynchronous", "network-programming", "development-tools"]
publish = true

[features]
default = ["tcp", "signals"]

# ── JSON-RPC transports ────────────────────────────────────────
tcp = []
ws = ["dep:tokio-tungstenite"]
ipc = ["dep:interprocess"]

# ── default facilities ─────────────────────────────────────────
signals = []
worker = []
probes = ["dep:axum"]

# ── CoordinationLock backends ──────────────────────────────────
file-lock = []
lease = []
pg-lock = ["dep:tokio-postgres"]

# ── fault-tolerance strategy ───────────────────────────────────
replica = []
leader-follower = ["lease"]

# ── schema generation ──────────────────────────────────────────
schema = ["dep:schemars"]

# ── CLI binary ─────────────────────────────────────────────────
cli = ["dep:clap", "dep:notify", "dep:tracing-subscriber"]

[[bin]]
name = "malkuth"
required-features = ["cli"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, optional = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

tokio-tungstenite = { workspace = true, optional = true }
interprocess = { workspace = true, optional = true, features = ["tokio"] }
axum = { version = "0.8", optional = true }
tokio-postgres = { workspace = true, optional = true }

# CLI-only deps
clap = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
